@@ -7,12 +7,31 @@ First, download and install the latest version of MinGW and then MSYS.
 You'll need all the libraries described in the INSTALL file in CVS.  You
 don't have to build SDL_mixer yourself -- just download OpenAL.
 
-Copy the DLLs for each library to \[MinGW]\lib.  Copy the header files for
+You should get  the 'mingw' development build for SDL, and follow the
+instructions to install it into mingw.  All others will be either for win32 
+or VC
+
+These are the files you need to download:
+
+http://www.libsdl.org/release/SDL-devel-1.2.5a-mingw32.tar.gz
+http://www.libsdl.org/projects/SDL_image/release/SDL_image-devel-1.2.2-VC6.zip
+ftp://opensource.creative.com/pub/sdk/OpenALSDK.exe
+http://www.vorbis.com/files/1.0/windows/OggVorbis-win32sdk-1.0.zip
+
+you can now do either of the following:
+1) Copy the DLLs for each library to \[MinGW]\lib.  Copy the header files for
 each library to \[MinGW]\include, (where [MinGW] is the directory where you
 installed MinGW) except for the Ogg Vorbis headers -- copy the folders (ogg
 and vorbis) containing the header files to the include directory.
 
-Rename OpenAL32.dll to openal.dll.
+2) within MSYS set C_INSTALL_PATH and LIBRARY_PATH to point at all of the 
+respective include and library dirs where you installed them.  i.e. something 
+like:
+export C_INCLUDE_PATH=/mingw/include/SDL:/c/VClibs/SDL_image-1.2.2/include/:/c/VClibs/OpenAL\ 1.0\ SDK/Include/:/c/VClibs/oggvorbis-win32sdk-1.0/include/
+
+export LIBRARY_PATH=/c/VClibs/SDL_image-1.2.2/lib/:/c/VClibs/OpenAL\ 1.0\ SDK/libs/:/c/VClibs/oggvorbis-win32sdk-1.0/lib/
+
+NOTE:  If you use the 2nd methood above, you need to include the path to SDL in C_INCLUDE_PATH (but not in LIBRARY_PATH)
 
 The Ogg Vorbis headers want a header that is not included with MinGW.  To get
 this file, download
@@ -24,9 +43,16 @@ Start menu and on the desktop).
 
 cd to the UQM directory.  It'll be at /[drive letter]/[path to uqm].
 
+./build.sh uqm config
+
+It should correctly detect everything, and give you a menu.
+Now turn off OpenGL, as it doesn't work with mingw yet
+
+Next run './build.sh uqm depend' (just to be sure)
+and lastly:
 ./build.sh uqm
 
-Follow the instructions and it should build successfully.
+If you did everything correctly, it should ow build successfully.
 
 To run the built executable, you should copy all the required DLLs to the
 same directory the executable is in, or copy them to your Windows
