@@ -74,6 +74,8 @@ LIB_openal_NAME="OpenAL"
 LIB_openal_CFLAGS=""
 if [ `uname` = 'FreeBSD' ]; then
       LIB_openal_LDFLAGS="-L/usr/local/lib -pthread -lopenal"
+elif [ `uname | $PROG_sed_FILE s/^MINGW32.*$/MINGW32/` = 'MINGW32' ]; then
+      LIB_openal_LDFLAGS="-lopenal32"
 else
       LIB_openal_LDFLAGS="-lopenal"
 fi
@@ -84,6 +86,9 @@ LIB_opengl_NAME="OpenGL"
 if [ `uname` = 'FreeBSD' ]; then
 	LIB_opengl_CFLAGS="-I/usr/X11R6/include -D_THREAD_SAFE"
 	LIB_opengl_LDFLAGS="-L/usr/X11R6/lib -lX11 -lXext -pthread -lGL"
+elif [ `uname | $PROG_sed_FILE s/^MINGW32.*$/MINGW32/` = 'MINGW32' ]; then
+	LIB_opengl_CFLAGS=""
+	LIB_opengl_LDFLAGS="-lopengl32"
 else
 	LIB_opengl_CFLAGS=""
 	LIB_opengl_LDFLAGS="-lGL"
